Add clause on academic we in HPLS

--- a/latexguidelines/authors.tex
+++ b/latexguidelines/authors.tex
@@ -39,7 +39,8 @@ The generic rules are complemented by the following house rules:
 \subsection{Academic \emph{we}}
 
 Monographs and articles that are authored by a single author should use the pronoun \emph{I} rather
-than \emph{we} as in ``As I have shown in Section~3 {\dots}''.	
+than \emph{we} as in ``As I have shown in Section~3 {\dots}''. In the series \emph{History and Philosophy of the Language
+Sciences}, one may deviate from this rule by way of exception.
  
 
 \subsection{British vs.\ American English}
