fix incorrect commenting

--- a/latexguidelines/authors.tex
+++ b/latexguidelines/authors.tex
@@ -246,7 +246,7 @@ Please deliver a \BibTeX\xspace file with all your references together with your
 Please provide all first and last names of all authors and editors. Do not use ``et~al.''  in the \BibTeX\xspace file; this will be generated automatically when inserted.
 
 % For bipartite family names like ``von Stechow'', ``Van Eynde'', and ``de Hoop'' make sure that these
-family names are contained in curly brackets.
+% family names are contained in curly brackets.
 % These authors will then be cited as \citet{VanEynde2006a} and \citet{vonStechow84a}.
  Note that Dutch names like ``de Hoop'' are not treated differently from other surnames.
 
