Add subfig and row placement showcaes

--- a/latexguidelines/lsp-guidelines.bib
+++ b/latexguidelines/lsp-guidelines.bib
@@ -182,3 +182,12 @@ address={Lausanne, Paris},
 	Title = {Gunnar Bech's Government and Binding Theory. GB's GB Theory},
 	Year = {1984}
 }
+
+@book{Müller2021,
+    editor = {Müller, Stefan},
+    year = {2021},
+    title = {Head-Driven Phrase Structure Grammar: {The} handbook},
+    publisher = {Language Science Press},
+    location = {Berlin},
+    url = {https://langsci-press.org/catalog/book/259}
+    }
