Remove packages that should be on CTAN; folder structure

--- a/latexguidelines/localpackages.tex
+++ b/latexguidelines/localpackages.tex
@@ -1,20 +1,12 @@
 \usepackage{tabularx}
-\usepackage{forest}
-\usepackage{avm}
-\usepackage{listings}
-\usepackage{amsmath,amssymb}
+\usepackage[edges, linguistics]{forest}
+\usepackage{amsmath, amssymb}
+\usepackage{subcaption}
 \usepackage{tikz}
 \usepackage{pgfplots}
-\usepackage{langsci/styles/langsci-gb4e}
-\usepackage{langsci/styles/langsci-optional} 
-\usepackage{jambox} 
-\usepackage{langsci/styles/jambox}
+\usepackage{langsci-avm}
+\usepackage{langsci-optional} 
+\usepackage{langsci-gb4e}
 
-\usepackage{listings}% Verbatim can't handle line wrap
-\lstset{
-basicstyle=\ttfamily,
-columns=flexible,
-breaklines=true
-} 
-
-\usepackage{subcaption}
+\usepackage{listings}
+\lstset{basicstyle=\ttfamily, columns=flexible, breaklines=true} 
