--- a/latexguidelines/wrap-global.tex
+++ b/latexguidelines/wrap-global.tex
@@ -5,7 +5,8 @@
 % 	        ,draftmode  
 ]{langscibook}  
 
-\renewcommand{\lsSeries}{guidelines}                   
+\renewcommand{\lsSeries}{guidelines}
+\renewcommand{\lsSeriesNumber}{}
 \author{Sebastian Nordhoff and Stefan Müller}
 \title{Language Science Press guidelines}  
 \subtitle{Complete set of guidelines}
